Создание сервиса обработки ошибок
