# backend/docs/swagger.json
@@ -6,9 +6,8 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/api/v1",
     "paths": {
-        "/api": {
+        "/api/get": {
             "get": {
                 "description": "get string by ID",
                 "consumes": [
@@ -24,7 +23,57 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.StatusError"
+                        }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "errors.Status": {
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3,
+                4,
+                5
+            ],
+            "x-enum-comments": {
+                "BadRequest": "400",
+                "Forbidden": "403",
+                "NotFound": "404",
+                "Unauthorized": "401",
+                "UnsupportedMediaType": "415"
+            },
+            "x-enum-descriptions": [
+                "400",
+                "401",
+                "403",
+                "404",
+                "415"
+            ],
+            "x-enum-varnames": [
+                "BadRequest",
+                "Unauthorized",
+                "Forbidden",
+                "NotFound",
+                "UnsupportedMediaType"
+            ]
+        },
+        "errors.StatusError": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/errors.Status"
                 }
             }
         }
